IO::Buffer for scheduler interface.

--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -416,6 +416,7 @@ $(srcdir)/enc/jis/props.h: enc/jis/props.kwd
 
 .c.@OBJEXT@:
 	@$(ECHO) compiling $<
+	$(Q) $(MAKEDIRS) $(@D)
 	$(Q) $(CC) $(CFLAGS) $(XCFLAGS) $(CPPFLAGS) $(COUTFLAG)$@ -c $<
 
 .$(ASMEXT).@OBJEXT@:
